[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/UI/Hand.png" type="Texture" id=1]
[ext_resource path="res://Assets/Personagens/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objetos/Capsulas/Capsules_sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objetos/Tiros/Shoot_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Cenario/SelectionMenu_Screen.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Play.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/GnuUnifontFull-Pm9P.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/UI/Tutorial.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Anim_Moving"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Moving_ship:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 50 ), Vector2( 0, -50 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Anim_Shot"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Touch_Ship/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 354.479, 695 ), Vector2( 300, 695 ), Vector2( 354.479, 695 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Touch_Ship/Shot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 270.269, 681.167 ), Vector2( 270.269, 481 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Touch_Ship/Shot:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Anim_Item"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Catching_Capsule/Ship:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 269, 861 ), Vector2( 249, 861 ), Vector2( 289, 861 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Catching_Capsule/capsule1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 246, 741.904 ), Vector2( 246, 861 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Catching_Capsule/capsule1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Catching_Capsule/capsule2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 291, 741 ), Vector2( 291, 861 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Catching_Capsule/capsule2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 1, 8, 31, 31 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 8, 30, 31 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 8, 8, 8, 8 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 24, 14 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 48, 14, 24, 13 )

[sub_resource type="DynamicFont" id=14]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=15]
size = 64
outline_size = 1
font_data = ExtResource( 7 )

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 270.269 ]
}

[node name="Anim_Moving" type="AnimationPlayer" parent="."]
anims/Anim_Moving = SubResource( 1 )

[node name="Anim_shot" type="AnimationPlayer" parent="."]
anims/Anim_Shot = SubResource( 2 )

[node name="Anim_item" type="AnimationPlayer" parent="."]
anims/Anim_Item = SubResource( 3 )

[node name="Image" type="TextureRect" parent="."]
margin_right = 540.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moving_ship" type="Node2D" parent="."]
position = Vector2( -16.317, 0 )

[node name="Ship" type="Sprite" parent="Moving_ship"]
position = Vector2( 270.929, 313.103 )
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 4 )

[node name="Hand" type="Sprite" parent="Moving_ship"]
position = Vector2( 300.929, 328.521 )
rotation = -0.785398
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Catching_Capsule" type="Node2D" parent="."]

[node name="capsule1" type="Sprite" parent="Catching_Capsule"]
visible = false
position = Vector2( 246, 743.192 )
texture = SubResource( 5 )

[node name="capsule2" type="Sprite" parent="Catching_Capsule"]
position = Vector2( 291, 859.702 )
texture = SubResource( 5 )

[node name="Ship" type="Sprite" parent="Catching_Capsule"]
position = Vector2( 288.567, 861 )
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 6 )

[node name="Touch_Ship" type="Node2D" parent="."]

[node name="Shot" type="AnimatedSprite" parent="Touch_Ship"]
visible = false
position = Vector2( 270.269, 651.499 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
frame = 1
playing = true

[node name="Ship" type="Sprite" parent="Touch_Ship"]
position = Vector2( 271.408, 679.151 )
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 4 )

[node name="Hand" type="Sprite" parent="Touch_Ship"]
position = Vector2( 316.149, 695 )
rotation = -0.785398
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Play" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.207
margin_top = -113.673
margin_right = -35.207
margin_bottom = -99.673
rect_scale = Vector2( 5, 5 )
texture_normal = SubResource( 12 )
texture_pressed = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moving_Ship" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -397.825
margin_right = 170.0
margin_bottom = -322.825
custom_fonts/font = SubResource( 14 )
text = "Para Mover a sua Nave, arraste-a para onde desejar na tela"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Catching_Capsule2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = 355.0
margin_right = 170.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 102, 25 )
custom_fonts/font = SubResource( 14 )
text = "Arraste a nave para coletar itens"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shooting_Click" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -126.0
margin_right = 170.0
margin_bottom = -71.0
rect_pivot_offset = Vector2( 102, 25 )
custom_fonts/font = SubResource( 14 )
text = "Toque na nave para atirar"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -166.0
margin_top = 48.0
margin_right = 170.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 15 )
text = "Tutorial"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
